--- a/EstoqueSharp.csproj
+++ b/EstoqueSharp.csproj
@@ -52,12 +52,30 @@
     <Compile Include="CadastroMarca.Designer.cs">
       <DependentUpon>CadastroMarca.cs</DependentUpon>
     </Compile>
-    <Compile Include="DBConnect.cs" />
-    <Compile Include="Marca.cs">
+    <Compile Include="CadastroProduto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Marca.Designer.cs">
-      <DependentUpon>Marca.cs</DependentUpon>
+    <Compile Include="CadastroProduto.Designer.cs">
+      <DependentUpon>CadastroProduto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DBConnect.cs" />
+    <Compile Include="Fornecedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Fornecedor.Designer.cs">
+      <DependentUpon>Fornecedor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inicio.Designer.cs">
+      <DependentUpon>Inicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UnidadeMedida.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UnidadeMedida.Designer.cs">
+      <DependentUpon>UnidadeMedida.cs</DependentUpon>
     </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
@@ -65,16 +83,37 @@
     <Compile Include="Principal.Designer.cs">
       <DependentUpon>Principal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Produto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produto.Designer.cs">
+      <DependentUpon>Produto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CadastroUnidadeMedida.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroUnidadeMedida.Designer.cs">
+      <DependentUpon>CadastroUnidadeMedida.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CadastroMarca.resx">
       <DependentUpon>CadastroMarca.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Marca.resx">
-      <DependentUpon>Marca.cs</DependentUpon>
+    <EmbeddedResource Include="CadastroProduto.resx">
+      <DependentUpon>CadastroProduto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inicio.resx">
+      <DependentUpon>Inicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UnidadeMedida.resx">
+      <DependentUpon>UnidadeMedida.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produto.resx">
+      <DependentUpon>Produto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -85,6 +124,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CadastroUnidadeMedida.resx">
+      <DependentUpon>CadastroUnidadeMedida.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
